--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^2.12.0",
     "@remix-run/serve": "^2.12.0",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.441.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
